crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__pipeline_stage_h2d_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 134
expression: stage
---
PipelineStage {
    kind: HostToDevice,
    label: "weights_upload",
    cost: 4096,
}
