crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__pipeline_stage_kind_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 150
expression: variants
---
[
    HostToDevice,
    Compute,
    DeviceToHost,
]
