crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__profile_accumulator_empty_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 102
expression: acc
---
ProfileAccumulator {
    entries: {},
}
