crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__scatter_gather_config_default_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 261
expression: cfg
---
ScatterGatherConfig {
    bounds_check: true,
    reduce: Assign,
}
