crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__scatter_gather_config_with_add_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 267
expression: cfg
---
ScatterGatherConfig {
    bounds_check: true,
    reduce: Add,
}
