crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__scatter_reduce_all_variants_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 279
expression: variants
---
[
    Assign,
    Add,
    Max,
    Min,
    Mul,
]
