crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__sharding_strategy_column_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 365
expression: s
---
ColumnParallel
