crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__sharding_strategy_custom_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 377
expression: s
---
Custom {
    splits: [
        128,
        256,
        128,
    ],
}
