crates/bitnet-kernels/tests/snapshots/snapshot_wave_21__sharding_strategy_row_debug.snap
---
source: crates/bitnet-kernels/tests/snapshot_wave_21.rs
assertion_line: 371
expression: s
---
RowParallel
